<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:id="@+id/removeConstraintLayout"
    android:layout_width="300dp"
    android:layout_height="wrap_content">

    <androidx.constraintlayout.widget.ConstraintLayout
        android:id="@+id/layoutDialog"
        android:layout_width="300dp"
        android:layout_height="wrap_content"
        android:background="@drawable/custom_bkg"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">

        <TextView
            android:id="@+id/errorTitle"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="@drawable/red_bkg"
            android:padding="12dp"
            android:text="@string/Delete_Content"
            android:textColor="@color/white"
            android:textSize="18sp"
            android:textStyle="bold"
            app:layout_constraintTop_toTopOf="parent" />

        <ImageView
            android:id="@+id/errorImage"
            android:layout_width="25dp"
            android:layout_height="25dp"
            android:layout_marginEnd="10dp"
            android:src="@drawable/baseline_playlist_remove_24"
            app:tint="@color/white"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintTop_toTopOf="@id/errorTitle"
            app:layout_constraintBottom_toBottomOf="@id/errorTitle" />

        <TextView
            android:id="@+id/errorDesc"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="18dp"
            android:layout_marginBottom="40dp"
            android:layout_marginEnd="20dp"
            android:layout_marginStart="20dp"
            android:gravity="center_horizontal"
            android:text="@string/Delete_Content_msg"
            android:textColor="@color/lavender"
            android:textSize="16sp"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintTop_toBottomOf="@id/errorTitle" />

    </androidx.constraintlayout.widget.ConstraintLayout>

    <Button
        android:id="@+id/CDeleteButton"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="40dp"
        android:layout_marginEnd="40dp"
        android:backgroundTint="@color/red"
        app:cornerRadius="12dp"
        android:text="@string/Yes_msg"
        android:textSize="14sp"
        app:layout_constraintBottom_toBottomOf="@id/layoutDialog"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
     app:layout_constraintTop_toBottomOf="@id/layoutDialog" />

</androidx.constraintlayout.widget.ConstraintLayout>
